# lazy-unlearner

./: README.md  setup.sh
rmu/: Makefile  pyproject.toml  run.py
rmu/notebooks/: eval_base.ipynb  eval_base_it.ipynb  eval_unlearn.ipynb  eval_unlearn_ablated_it.ipynb  eval_unlearn_it.ipynb
rmu/rmu/: __init__.py  config.py  model_utils.py  unlearn.py  utils.py
rmu/scripts/: hp_search.py  run_base.sh  run_it.sh  run_test.py  test.sh  upload.py
sae/: Makefile  pyproject.toml  requirements.txt
sae/notebooks/: ablated_analysis.ipynb  bootstrap.ipynb  completions.ipynb  direction_analysis_base.ipynb  direction_analysis_it.ipynb  eval_ablated.ipynb  mod_model.ipynb  perplexity_base.ipynb  probes_dataset_base.ipynb  probes_dataset_it.ipynb  process_data.ipynb  refusal_base.ipynb  refusal_base_general.ipynb  refusal_base_general_same.ipynb  refusal_it.ipynb  sae.ipynb  train_probe.ipynb
sae/sae_refusal/: __init__.py  data.py  plot.py
sae/sae_refusal/model/: __init__.py  embedding.py  gemma.py
sae/sae_refusal/pipeline/: activations.py  generate_directions.py  hook.py  select_directions.py  utils.py
sae/sae_refusal/probe/: __init__.py  train.py  utils.py
sae/sae_refusal/sae/: __init__.py  hook.py
